[gd_scene load_steps=6 format=2]

[ext_resource path="res://menu.gd" type="Script" id=1]
[ext_resource path="res://box.png" type="Texture" id=2]
[ext_resource path="res://Fonts/joystix monospace copy 2.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 35
font_data = ExtResource( 3 )

[node name="Menu" type="Node2D"]
script = ExtResource( 1 )

[node name="realmenu" type="Node2D" parent="."]

[node name="box" type="Sprite" parent="realmenu"]
position = Vector2( 960, 580 )
scale = Vector2( 12, 14 )
texture = ExtResource( 2 )

[node name="Club" type="Button" parent="realmenu"]
margin_left = 713.553
margin_top = 393.149
margin_right = 1181.55
margin_bottom = 463.149

[node name="Label2" type="Label" parent="realmenu/Club"]
margin_left = 120.522
margin_top = 14.2992
margin_right = 345.522
margin_bottom = 50.2992
custom_fonts/font = SubResource( 1 )
text = "Nightclub"

[node name="Park" type="Button" parent="realmenu"]
margin_left = 713.553
margin_top = 580.0
margin_right = 1181.55
margin_bottom = 650.0

[node name="Label4" type="Label" parent="realmenu/Park"]
margin_left = 183.847
margin_top = 16.3419
margin_right = 283.847
margin_bottom = 52.3419
custom_fonts/font = SubResource( 1 )
text = "Park"

[node name="Library" type="Button" parent="realmenu"]
margin_left = 713.553
margin_top = 753.149
margin_right = 1181.55
margin_bottom = 823.149

[node name="Label5" type="Label" parent="realmenu/Library"]
margin_left = 144.959
margin_top = 16.9432
margin_right = 319.959
margin_bottom = 52.9432
custom_fonts/font = SubResource( 1 )
text = "Library"

[node name="Label" type="Label" parent="realmenu"]
margin_left = 815.523
margin_top = 228.541
margin_right = 1076.52
margin_bottom = 270.541
custom_fonts/font = SubResource( 2 )
text = "Where to?"
[connection signal="pressed" from="realmenu/Club" to="." method="_on_Club_pressed"]
[connection signal="pressed" from="realmenu/Park" to="." method="_on_Park_pressed"]
[connection signal="pressed" from="realmenu/Library" to="." method="_on_Library_pressed"]
